# djangalytics

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test_api.py  test_snake_analytics.py
.devcontainer/: devcontainer.json  setup.sh  start-services.sh  welcome.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  performance.yml  release.yml
analytics/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
analytics/management/commands/: seed_events.py  setup_projects.py
analytics/migrations/: 0001_initial.py  0002_add_is_default_to_project.py  0002_event_source_event_analytics_e_source_e22f42_idx_and_more.py
analytics/tests/: __init__.py  test_api.py  test_models.py  test_rate_limiting.py  test_serializers.py  test_utils.py
djangalytics/: asgi.py  settings.py  urls.py  wsgi.py
example-apps/flappy-hedgehog/: config.js  flappy-hedgehog.js  index.html  index_original.html
example-apps/snake-game/: config.js  index.html  snake.js
frontend/: Dockerfile  lighthouserc.json  package-lock.json  package.json
frontend/src/: App.css  App.js  App.test.js  config.js
frontend/src/components/: Dashboard.js  Dashboard.test.js  EventCapture.js  EventCapture.test.js  ProjectSelector.js  Settings.js
snake-game/: index.html  snake.js
